--- a/helm-chart/templates/06-front-deployment.yaml
+++ b/helm-chart/templates/06-front-deployment.yaml
@@ -59,6 +59,6 @@ spec:
       volumes:
         - name: nginx-config
           configMap:
-            name: kubeshark-nginx-config
+            name: kubeshark-nginx-config-map
       dnsPolicy: ClusterFirstWithHostNet
       serviceAccountName: {{ include "kubeshark.serviceAccountName" . }}
