--- a/helm-chart/templates/09-worker-daemon-set.yaml
+++ b/helm-chart/templates/09-worker-daemon-set.yaml
@@ -42,7 +42,7 @@ spec:
           name: kubeshark-worker-daemon-set
           envFrom:
             - secretRef:
-                name: kubeshark-hub-secret
+                name: kubeshark-secret
         {{- if .Values.tap.debug }}
           env:
           - name: PROFILING_ENABLED
