--- a/helm-chart/templates/14-secret.yaml
+++ b/helm-chart/templates/14-secret.yaml
@@ -1,7 +1,7 @@
 kind: Secret
 apiVersion: v1
 metadata:
-  name: kubeshark-hub-secret
+  name: kubeshark-secret
   namespace: {{ .Release.Namespace }}
   labels:
     app.kubeshark.co/app: hub
