--- a/helm-chart/templates/13-config-map.yaml
+++ b/helm-chart/templates/13-config-map.yaml
@@ -1,7 +1,7 @@
 kind: ConfigMap
 apiVersion: v1
 metadata:
-  name: kubeshark-hub-config
+  name: kubeshark-config-map
   namespace: {{ .Release.Namespace }}
   labels:
     app.kubeshark.co/app: hub
