:rewind: Set the probing port of Hub back to 80

--- a/helm-chart/templates/04-hub-deployment.yaml
+++ b/helm-chart/templates/04-hub-deployment.yaml
@@ -41,14 +41,14 @@ spec:
             successThreshold: 1
             initialDelaySeconds: 3
             tcpSocket:
-              port: {{ .Values.tap.proxy.hub.srvport }}
+              port: 80
           livenessProbe:
             periodSeconds: 1
             failureThreshold: 3
             successThreshold: 1
             initialDelaySeconds: 3
             tcpSocket:
-              port: {{ .Values.tap.proxy.hub.srvport }}
+              port: 80
           resources:
             limits:
               cpu: {{ .Values.tap.resources.hub.limits.cpu }}
