:wrench: Re-order the template filenames and re-generate `values.yaml` and `complete.yaml`

--- a/helm-chart/values.yaml
+++ b/helm-chart/values.yaml
@@ -28,10 +28,10 @@ tap:
   dryrun: false
   ignoretainted: false
   ingress:
-    enabled: false
-    classname: ""
-    host: kubeshark.local
     annotations: {}
+    classname: ""
+    enabled: false
+    host: ks.svc.cluster.local
     tls: []
   ipv6: true
   labels: {}
